# AI-400-task-manager

./: .env.example  .gitignore  README.md  SQLMODEL_IMPLEMENTATION_PLAN.md  hello.py  main.py  pyproject.toml  pytest.ini
.claude/skills/fastapi-builder/: SKILL.md
.claude/skills/fastapi-builder/assets/01-hello-world/: main.py
.claude/skills/fastapi-builder/assets/02-crud-single-file/: main.py  requirements.txt
.claude/skills/fastapi-builder/assets/03-modular-structure/app/: __init__.py  database.py  main.py  models.py  schemas.py
.claude/skills/fastapi-builder/assets/03-modular-structure/app/routers/: items.py
.claude/skills/fastapi-builder/assets/04-production-ready/: .env.example  README.md  requirements.txt
.claude/skills/fastapi-builder/references/: authentication.md  database-integration.md  error-handling.md  project-structure.md  pydantic-patterns.md  status-codes.md
.claude/skills/fastapi-builder/scripts/: generate_crud_endpoints.py
.claude/skills/pytest-test-suite/: SKILL.md
.claude/skills/pytest-test-suite/assets/: conftest_template.py  pyproject.toml  pytest.ini  test_api_template.py  test_integration_template.py  test_unit_template.py
.claude/skills/pytest-test-suite/references/: api_testing.md  fixtures_guide.md  mocking_guide.md  parametrize_guide.md  pytest_patterns.md
.claude/skills/pytest-test-suite/scripts/: generate_test_file.py  run_tests_with_coverage.py  scaffold_tests.py
.claude/skills/sql-model-builder/: SKILL.md
.claude/skills/sql-model-builder/assets/: alembic.ini  env.py
.claude/skills/sql-model-builder/references/: alembic_guide.md  mysql.md  performance.md  postgresql.md  security.md  sqlite.md
.claude/skills/sql-model-builder/scripts/: base_models.py  crud_repository.py  session_factory.py
app/: crud.py  database.py  models.py
app/routers/: tasks.py
tests/: conftest.py
tests/api/: test_tasks.py
tests/unit/: test_crud.py  test_models.py
